--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,36 +12,31 @@ a {
 }
 
 a:visited {
-    color: black;
+  color: black;
 }
 
-li {
-  list-style: none;
-}
-
-/* 
- 
 /* navbar style start  */
 
 .main-nav {
   width: 100%;
   height: 4rem;
-  display: grid;
-  grid-template-columns:  2rem 30% 30% 30% 2rem;
+  display: flex;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -50px;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 .logo {
-  display: grid;
-  /* background-color: #3b5998; */
-  grid-column: 2/3;
-  justify-content: start;
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
+  margin-left: 20px;
 }
 
 .menu-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 32px;
 }
