--- a/src/components/FirstPage/FirstPage.css
+++ b/src/components/FirstPage/FirstPage.css
@@ -1,3 +1,8 @@
 .fp-div {
-  border: 15px solid black;
+  border: 5px solid black;
+}
+
+.causes-heading {
+  text-align: center;
+  margin: 5px;
 }
