--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,20 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Jost", sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:visited {
-  color: black;
-}
-
 /* navbar style start  */
 
 .main-nav {
@@ -25,6 +8,7 @@ a:visited {
     rgba(0, 0, 0, 0.3) 0px 30px 60px -50px;
   justify-content: space-between;
   flex-direction: row;
+  background-color: #f9f9f9;
 }
 
 .logo {
