--- a/src/components/FirstPage/FirstPage.css
+++ b/src/components/FirstPage/FirstPage.css
@@ -1,8 +1,11 @@
 .fp-div {
-  border: 5px solid black;
+  border: 2px solid #f9f3ee;
 }
 
 .causes-heading {
   text-align: center;
   margin: 5px;
+  padding: 20px;
+  color: white;
+  font-size: 45px;
 }
