--- a/src/components/ConnectWallet/ConnectWallet.css
+++ b/src/components/ConnectWallet/ConnectWallet.css
@@ -1,9 +1,12 @@
 .connect-wallet {
   text-align: center;
   padding: 60px;
-  padding-bottom: 235px;
+  padding-bottom: 100px;
   line-height: 33px;
   margin: 8px;
+  display: flex;
+    /* justify-content: space-evenly; */
+  flex-direction: column;
 }
 
 .walletTitle {
@@ -17,15 +20,19 @@
 }
 .connect-wallet-child button {
   background-color: white;
-  border: 2px solid white;
-  border-radius: 5%;
+  border: none;
+  border-radius: 40px;
   font-size: 25px;
-  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 25px;
   cursor: pointer;
+  background-color: rgba(255, 255,255, 0.7);
 }
 
 .connect-wallet-child button:hover {
-  background-image: linear-gradient(to right, #f9ceee, #b1bce6);
-  border-color: black;
-  color: white;
+  background-color: rgba(255, 255,255, 1);
 }
+
