--- a/src/components/CreateCause/CreateCause.css
+++ b/src/components/CreateCause/CreateCause.css
@@ -14,6 +14,7 @@
   font-size: 30px;
   border-radius: 15px;
   border: 2px solid #9a86a4;
+  text-align: center;
 }
 
 .textInput:focus {
@@ -33,15 +34,18 @@
 
 input[type="submit"] {
   background-color: white;
-  border: 2px solid white;
-  border-radius: 5%;
+  border: none;
+  border-radius: 40px;
   font-size: 25px;
-  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   cursor: pointer;
+  background-color: rgba(255, 255,255, 0.5);
 }
 
 input[type="submit"]:hover {
-  background-image: linear-gradient(to right, #f9ceee, #b1bce6);
-  border-color: black;
-  color: white;
+  background-color: rgba(255, 255,255, 1);
+
 }
