--- a/src/components/ConnectWallet/ConnectWallet.css
+++ b/src/components/ConnectWallet/ConnectWallet.css
@@ -5,7 +5,7 @@
   line-height: 33px;
   margin: 8px;
   display: flex;
-    /* justify-content: space-evenly; */
+  /* justify-content: space-evenly; */
   flex-direction: column;
 }
 
@@ -29,10 +29,13 @@
   padding-bottom: 10px;
   margin-top: 25px;
   cursor: pointer;
-  background-color: rgba(255, 255,255, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .connect-wallet-child button:hover {
-  background-color: rgba(255, 255,255, 1);
+  background-color: rgba(255, 255, 255, 1);
 }
 
+p {
+  font-size: 20px;
+}
