--- a/src/components/CreateCause/CreateCause.css
+++ b/src/components/CreateCause/CreateCause.css
@@ -6,12 +6,14 @@
 
 .causeTitle {
   padding: 35px;
-  font-size: 35px;
+  font-size: 45px;
   color: white;
 }
 
 .textInput {
-  font-size: 30px;
+  font-size: 20px;
+  width: 330px;
+  height: 45px;
   border-radius: 15px;
   border: 2px solid #9a86a4;
   text-align: center;
@@ -42,10 +44,21 @@ input[type="submit"] {
   padding-top: 10px;
   padding-bottom: 10px;
   cursor: pointer;
-  background-color: rgba(255, 255,255, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 input[type="submit"]:hover {
-  background-color: rgba(255, 255,255, 1);
+  background-color: rgba(255, 255, 255, 1);
+}
 
+input[type="text"] {
+  margin: 10px;
+}
+
+textarea {
+  margin: 10px;
+}
+
+label {
+  font-size: 20px;
 }
