--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0; 
-  font-family: 'Lato', sans-serif;
+  /* font-family: 'Lato', sans-serif; */
+  font-family: 'Josefin Sans', sans-serif;
+  color: rgb(15, 37, 78);
 }
 
 .AppComponent {
@@ -15,6 +18,14 @@ a {
   text-decoration: none;
 }
 
-a:visited {
-  color: black;
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+}
+
+h1{
+  color: rgb(15, 37, 78);
 }
