--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 /* navbar style start  */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
 .main-nav {
   width: 100%;
@@ -9,13 +10,18 @@
   justify-content: space-between;
   flex-direction: row;
   background-color: #f9f9f9;
+  
 }
 
 .logo {
+  font-family: 'Lato', sans-serif !important;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   margin-left: 20px;
+  font-weight: 900;
+  font-size: x-large;
+
 }
 
 .menu-link {
