--- a/src/components/Navbar/About.css
+++ b/src/components/Navbar/About.css
@@ -1,18 +1,19 @@
 .aboutp {
-    font-weight: 500;
-    width: 50%;
-    text-align: justify;
-    margin: auto;
-    padding-top: 50px;
+  font-weight: 500;
+  width: 50%;
+  text-align: justify;
+  margin: auto;
+  padding-top: 50px;
 }
 
 .about {
-    padding-top: 50px;
-    padding-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-.aboutus{
-    padding-left: 30px;
-    text-align: center;
-    color: white !important;
+.aboutus {
+  padding-left: 30px;
+  text-align: center;
+  color: white !important;
+  font-size: 50px;
 }
